k8s/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: synthex
  labels:
    name: synthex
    environment: local
